# Problem-Solving

./: .gitignore  2-3Moves.cpp  2231B-AnotherSortingProblem.cpp  2power.cpp  3power.cpp  A+B.cpp  AI-PoweredEmergencyResponseSyste.cpp  AddingReversedNumbers.cpp  Anton and Danik.cpp  Anton and Letters.cpp  Anton and Polyhedrons.cpp  ArrayColoring.cpp  AtillasFavouriteProblem.cpp  AvtoBus.cpp  Basic Struct.cpp  BasicCalculator.cpp  BearandBigBrother.cpp  Bit++.cpp  BlackslexAndNumberTheory.cpp  BlankSpace.cpp  Borze.cpp  C+=.cpp  C1-SkibidusAndFanumTax  Cake is Lie.cpp  CheckIfAllCharactersHaveEqualOccurences.cpp  Choosing Teams.cpp  ClearDigits.cpp  ClimbingStairs.cpp  CodeforcesChecking.cpp  CoinGame.cpp  CollatzConjecture.cpp  Collecting Coins.cpp  Combination Lock.cpp  ComeTogether.cpp  ComparisonString.cpp  ConcatenationVector.cpp  Copycopycopy.cpp  CountHiddenSequences.cpp  CountPrime.cpp  Decode XORed Array.cpp  (+297 more)
Div2-1080/: A  A.cpp  B  B.cpp  C  D
Div2-1102/: A.cpp  B.cpp  C.cpp  D.cpp  F.cpp
Div3-1080/: C.cpp  D.cpp
Div3-1084/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
Div3-1096/: A  A.cpp  B  B.cpp  C  C.cpp  D  D.cpp  t.cpp
PasswordGenerator/: CMakeLists.txt  json.h  main.cpp
Spring26-Round6/: A  A.cpp  B  B.cpp  C  C.cpp  input.txt
Spring26-Round7/: A.cpp  B.cpp  D.cpp
Tower-Of-Hanoi/: README.md  TowerOfHanoi.py
